# jupyterlab_autosave_on_focus_change

./: .all-contributorsrc  .copier-answers.yml  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  eslint.config.mjs  index.html  install.json  modules.html  package.json  pyproject.toml  setup.py  tsconfig.json
.github/: dependabot.yml
.github/workflows/: binder-on-pr.yml  build.yml  codeql.yml  docs.yml  trigger-mybinder-build.yml
assets/: highlight.css  navigation.js  search.js
binder/: environment.yml  postBuild
classes/: settings.FocusChangeAutoSaveSettings.html  tracker.FocusChangeAutoSaveTracker.html
functions/: utils.create_debug_printer.html  utils.debug_printer.html
interfaces/: settings.IFocusChangeAutoSaveSettings.html  settings.IFocusChangeAutoSaveSettingsArgs.html  tracker.IFocusSaveTrackerArgs.html
modules/: consts.html  index.html  settings.html  tracker.html  utils.html
schema/: plugin.json  settings.json
src/: consts.ts  index.ts  settings.ts  tracker.ts  utils.ts
variables/: consts.PLUGIN_ID.html  consts.TOGGLE_ACTIVE_COMMAND_ID.html  index.default.html
